--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sudoku",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tsengjonathan.github.io/sudoku",
   "dependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.11",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^2.1.1",
     "typescript": "^3.6.4"
   }
 }
