--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint src --ext js,jsx",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
