--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
         CI: true
     - name: Deploy to Github Pages
       run: |
-        git config --global user.email ${{ GITHUB_ACTOR }}@users.noreply.github.com
-        git config --global user.name ${{ GITHUB_ACTOR }}
+        git config --global user.email ${{ github.actor }}@users.noreply.github.com
+        git config --global user.name ${{ github.actor }}
         npm run deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
