--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint src --ext js,jsx",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-links": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
