:heavy_plus_sign: Add Storybook Knobs

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://tsengjonathan.github.io/sudoku",
   "dependencies": {
     "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
